[metadata]
name = sia380
version = 0.0.1
author = Martin Müller
author_email = martin.mueller2@fhnw.ch
description = GebOpt Package
url = https://gitlab.fhnw.ch/gebopt/code/sia380
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
keywords =
    sia380
    building energy

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
zip_safe = False
install_requires =
    numpy
    matplotlib
    pandas
    pyyaml
    xlsxwriter
    odfpy
    openpyxl
    rich
    rich-cli

[options.packages.find]
where = src

[options.package_data]
sia380.config =
    *.json
sia380.resources =
    *.yml

