[metadata]
name = esprsim
version = 0.8.0
author = Achim Geissler
author_email = achim.geissler@fhnw.ch
description = ESP-r Python Simulation Support Package
url = https://gitlab.fhnw.ch/GruppeBau/esprsim
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
keywords =
    ESP-r
    building energy

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
zip_safe = False
install_requires =
    humanfriendly
    pandas
    matplotlib
    pathlib

[options.packages.find]
where = src

[options.package_data]

